United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7117282 Tiered: assert(base == NULL || t_adr->isa_rawptr() || !phase->type(base)->higher_equal(TypePtr:
7117282 : Tiered: assert(base == NULL || t_adr->isa_rawptr() || !phase->type(base)->higher_equal(TypePtr:

Details
Type:
Bug
Submit Date:
2011-12-02
Status:
Closed
Updated Date:
2012-03-22
Project Name:
JDK
Resolved Date:
2012-01-20
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
Reproducible with hs23b06.
When TieredCompilation is on VM crashes in fastdebug with
;; Using jvm: "/export/local/common/jdk/baseline/linux-i586/jre/lib/i386/server/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P2/001807.kvn/source/src/share/vm/opto/memnode.cpp:293), pid=17420, tid=3424340880
#  assert(base == NULL || t_adr->isa_rawptr() || !phase->type(base)->higher_equal(TypePtr::NULL_PTR)) failed: NULL+offs not RAW address?
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) Server VM (23.0-b06-internal-201111290018.kvn.7112478-fastdebug mixed mode linux-x86 )
# Core dump written. Default location: /export/local/56583.JDK7.NIGHTLY.VM_linux-i586_jr_server_mixed_testlist.app/results/ResultDir/fruitRulesOBR/core or core.17420
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/f745b2be3737
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-emb/hotspot/rev/f745b2be3737
                                     
2011-12-15
EVALUATION

Memory slice is dead and memory node (Store) is processed before its memory is processed.
Delay memory node transformation until the memory is processed.
                                     
2011-12-06
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/f745b2be3737
                                     
2011-12-03



Hardware and Software, Engineered to Work Together