7117282: assert(base == NULL || t_adr->isa_rawptr() || !phase->type(base)

Delay memory node transformation until the memory is processed.

Reviewed-by: iveresov, never